
* Fixed false positive for ``cell-var-from-loop`` when variable is used as the default
  value for a keyword-only parameter.

  Closes #5012

* Fix false-positive ``undefined-variable`` with ``Lambda``, ``IfExp``, and
  assignment expression.

* Fix false-positive ``useless-suppression`` for ``wrong-import-order``

  Closes #2366

* Fixed ``toml`` dependency issue

  Closes #5066

* Fixed ``invalid-name`` not checking parameters of overwritten base ``object`` methods

  Closes #3614


What's New in Pylint 2.11.1?
============================
Release date: 2021-09-16

* ``unspecified-encoding`` now checks the encoding of ``pathlib.Path()`` correctly

  Closes #5017


What's New in Pylint 2.11.0?
============================
Release date: 2021-09-16

* The python3 porting mode checker and it's ``py3k`` option were removed. You can still find it in older pylint
  versions.

* ``raising-bad-type`` is now properly emitted when  raising a string

* Added new extension ``SetMembershipChecker`` with ``use-set-for-membership`` check:
  Emitted when using an in-place defined ``list`` or ``tuple`` to do a membership test. ``sets`` are better optimized for that.

  Closes #4776


* Added ``py-version`` config key (if ``[MASTER]`` section). Used for version dependant checks.
  Will default to whatever Python version pylint is executed with.

* ``CodeStyleChecker``

  * Added ``consider-using-assignment-expr``: Emitted when an assignment is directly followed by an if statement
    and both can be combined by using an assignment expression ``:=``. Requires Python 3.8

    Closes #4862

* Added ``consider-using-f-string``: Emitted when .format() or '%' is being used to format a string.

  Closes #3592

* Fix false positive for ``consider-using-with`` if a context manager is assigned to a
  variable in different paths of control flow (e. g. if-else clause).

  Closes #4751
